<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Registro">


    <ImageButton
        android:id="@+id/imgReg"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/imgReg"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/insNombreReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/insNombreReg"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/insEmailReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/insEmailReg"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/insContrasenaReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/insContrasenaReg"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/insConfirmarContra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/insConfirmarContra"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnRegistroReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/btnRegistrarReg"
        android:focusable="true"
        app:backgroundTint="#00FFFFFF"
        app:srcCompat="@drawable/baseline_check" />

</LinearLayout>