<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Login">


    <ImageButton
        android:id="@+id/imgLogin"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/imglogin"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/insNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/insNombreReg"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575" />
    <EditText
        android:id="@+id/insEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/insEmail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/insContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/insContrasena"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/btnIngresar"
        android:focusable="true"
        app:backgroundTint="#00FFFFFF"
        app:srcCompat="@drawable/baseline_check" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:contentDescription="@string/btnRegistrar"
        android:focusable="true"
        app:backgroundTint="#00FFFFFF"
        app:srcCompat="@drawable/baseline_person_add" />

</LinearLayout>